# EYWAI

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOIEMENT.md  GUIDE_DEMARRAGE.md  GUIDE_UTILISATION.md  README.md  commitlint.config.cjs  lint-staged.config.mjs  package-lock.json  package.json
backend/: .dockerignore  .importlinter  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/.venv-ci/: pyvenv.cfg
backend/.venv-ci-local/: pyvenv.cfg
backend/app/: README.md  __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  error_handlers.py  middleware.py  router.py
backend/app/core/: __init__.py  config.py  constants.py  database.py  exceptions.py  lifecycle.py  logging.py  paths.py  security.py  settings.py
backend/app/modules/: __init__.py
backend/app/runtime/: __init__.py
backend/app/shared/: __init__.py
backend/app/workers/: __init__.py
backend/scraping/: VM.py
backend/scraping/AGIRC-ARRCO/: AGIRC-ARRCO.py  AGIRC-ARRCO_AI.py  AGIRC-ARRCO_LegiSocial.py  (+1 more)
backend/tests/: ARCHITECTURE_VALIDATION_REPORT.md  README.md  conftest.py  test_absenteeism.py  test_absenteeism_simple.py  test_bonus_types.py  test_create_employee.py  test_cse_api_complet.py  test_forfait_jour_complet.py  test_login.py  test_medical_follow_up_complet.py  test_migration_collaborateur.py  test_password_reset.py  test_pdf.py  test_promotions_complet.py  test_recruitment_complet.py  test_repos_compensateur.py  test_saisies_avances.py  test_saisies_avances_integration.py  test_upload.py  test_upsert.py
(+1568 files in other folders)
